--- a/deforestacion-app/src/app/app.component.html
+++ b/deforestacion-app/src/app/app.component.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="caja">
-            <h2><img src="src/assets/img/logo.png" alt="Logo del apliativo" class="logo"></h2>
+            <h2><img src="../assets/img/logo.png" alt="Logo del apliativo" class="logo"></h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Sobre nosotros</a></li>
@@ -18,8 +18,8 @@
                     <li><a href="contacto.html">Historias</a></li>
                     <li><a href="contacto.html">Post</a></li>
                     <li><a href="contacto.html">Recursos</a></li>
-                    <li><img src="src/assets/img/usuario.png"></li>
-                    <li><img src="src/assets/img/lupa.png"></li>
+                    <li><img src="../assets/img/usuario.png"></li>
+                    <li><img src="../assets/img/lupa.png"></li>
                 </ul>
             </nav>
         </div>
@@ -37,26 +37,26 @@
         <section>
             <h2>Prioridades de Conservación</h2>
             <p>Identificamos las prioridades para la conservación y restauración de los bosques.</p>
-            <img src="src/assets/img/img1.png" alt="tema 1" class="img1">
+            <img src="../assets/img/img1.png" alt="tema 1" class="img1">
         </section>
         <section>
             <h2>Datos Relevantes</h2>
             <p>Aquí encontrarás datos relevantes sobre la deforestación en la región.</p>
-            <img src="src/assets/img/img2.png" alt="tema 2" class="img2">
+            <img src="../assets/img/img2.png" alt="tema 2" class="img2">
         </section>
         <section>
             <h2>Opiniones y Comentarios</h2>
             <p>Aquí puedes leer opiniones y comentarios sobre la deforestación de los habitantes de la región.</p>
-            <img src="src/assets/img/img3.png" alt="tema 3" class="img3">
+            <img src="../assets/img/img3.png" alt="tema 3" class="img3">
         </section>
         <section>
             <h2>Investigaciones e Informes</h2>
             <p>Explora investigaciones e informes de expertos sobre deforestación.</p>
-            <img src="src/assets/img/img4.png" alt="tema 4" class="img4">
+            <img src="../assets/img/img4.png" alt="tema 4" class="img4">
         </section>
     </main>
     <footer>
-        <img src="src/assets/img/logo.png">
+        <img src="../assets/img/logo.png">
         <p>© 2024 Bosques en Peligro</p>
     </footer>
 </body>
